# infrahub-demo-ixp

./: .infrahub.yml  README.md  docker-compose.yml  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.devcontainer/demo/: devcontainer.json
checks/: check_bgp_transit_session.gql  check_bgp_transit_session.py
generators/: IXPBGPPrivatePeering.gql  IXPBGPPrivatePeering.py
models/: infrastructure_base.yml  infrastructure_edge.py  ixp.yml  load_data.py
templates/: arista_bgp_config.j2  arista_router_config.gql
tests/: test_check.yml  test_graphql.yml  test_j2_transform.yml  test_python_transform.yml
tests/unit/: arista-config-input.json  arista-config-output.txt  oc-bgp-neighbors-input.json  oc-bgp-neighbors-output.json  oc-interfaces-input.json  oc-interfaces-output.json
transforms/: openconfig.py
