[tool.poetry]
name = "infrahub-demo-ixp"
version = "0.1.1"
description = "Infrahub - Demo repository for IXPs"
authors = ["OpsMill <info@opsmill.com>"]

[tool.poetry.dependencies]
python = "^3.10, < 3.13"
typer = "^0.12.3"
pygnmi = "^0.6.9"
invoke = "^2.1.2"
infrahub-sdk = { version = "0.10.1", extras = ["all"] }
nornir-infrahub = "^0, >=0.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^22.3.0"

[tool.poetry.group.workshop.dependencies]
jupyter = "1.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
